# locallibrary

./: .pdm-python  .travis.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_bookinstance_id_alter_bookinstance_status.py
catalog/templates/: base_generic.html
catalog/templates/catalog/: author_confirm_delete.html
core/: settings.py  urls.py
tests/: test_form.py  test_models.py  test_views.py
