[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "black>=23.10.1",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "wheel>=0.41.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

